# embodied_hornet

./: .gitignore  .gitmodules  README.md  pyproject.toml
docs/: system_integration_report.md
embodied_hornet/: __init__.py  env.py  inference_interactive.py  neural_idapbc.py  reichardt_emd.py  snn_live_slam.py  train.py
notebooks/: demo_colab.ipynb
scratch/: check_steer.py
