[project]
name = "embodied-hornet"
version = "0.1.0"
description = "Unified Spiking SLAM & Neuromechanical Flight Control for Autonomous Insect-Scale Flight"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "dm-haiku>=0.0.12",
    "optax>=0.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "imageio>=2.34.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
